--- a/1-guia/ejercicios-1/ej-10-1.tex
+++ b/1-guia/ejercicios-1/ej-10-1.tex
@@ -5,7 +5,8 @@
   \begin{enumerate}[label=\roman*)]
     \item\label{10-1-i} $p \entonces q,
             \qquad
-            \neg q \entonces \neg p, \qquad \neg p \o q \qquad \ytext \qquad  \neg (p \y \neg q)$.\par
+            \neg q \entonces \neg p, \qquad \neg p \otext q \qquad \ytext \qquad  \neg (p \y \neg q)$.
+
           Esto nos dice que podemos demostrar una afirmación de la forma $p \entonces q$ probando en su lugar
           $\neg q \entonces \neg p$ (es decir \textit{demostrando el contrarrecíproco}), o probando $\neg (p \y \neg q)$ (esto
           es una \textit{demostración por reducción al absurdo}).
