--- a/4-guia/ejercicios-4/ej-1-4.tex
+++ b/4-guia/ejercicios-4/ej-1-4.tex
@@ -35,7 +35,7 @@
         Si $2 \divideA a \cdot b \entonces
           \llaves{c}{
             a \text{ tiene que ser } par \\
-            \o \\
+            \otext \\
             b \text{ tiene que ser } par \\
           } \flecha{para que} a \cdot b$ sea par. Por lo tanto si  $2 \divideA a \cdot b \entonces 2 \divideA a $ \ o \ $2 \divideA b$.
 
