--- a/4-guia/ejercicios-4/ej-11-4.tex
+++ b/4-guia/ejercicios-4/ej-11-4.tex
@@ -1,6 +1,6 @@
 \begin{enunciado}{\ejercicio}
   \begin{enumerate}[label=\alph*)]
-    \item Probar que $\congruencia{a^2}{-1}{5} \sisolosi \congruencia{a}{2}{5}  \o \congruencia{a}{3}{5}$
+    \item Probar que $\congruencia{a^2}{-1}{5} \sisolosi \congruencia{a}{2}{5}  \otext \congruencia{a}{3}{5}$
     \item Probar que no existe ningún entero $a$ tal que $\congruencia{a^3}{-3}{7}$
     \item Probar que $\congruencia{a^7}{a}{7} \paratodo a \en \enteros$
     \item Probar que $7 \divideA a^2 + b^2 \sisolosi 7 \divideA a \y 7 \divideA b.$
@@ -32,10 +32,13 @@
               r_5(a) = 2 &\Leftrightarrow&  \congruencia{a}{2}{5} \Tilde\\
               r_5(a) = -2 &\Leftrightarrow&  \congruencia{a}{3}{5} \Tilde
             }
-          }$\par
-        \textit{Más aún}:\par
+          }$
+
+        \textit{Más aún}:
+
         Para una congruencia módulo 5 habrá solo 5 posibles restos,
-        por lo tanto se pueden ver todos los casos haciendo una \textit{table de restos}.\par
+        por lo tanto se pueden ver todos los casos haciendo una \textit{table de restos}.
+
         $
           \begin{array}{|c|c|c|c|c|c|}
             \hline
